--- a/.gitignore
+++ b/.gitignore
@@ -3,29 +3,11 @@ local.properties
 
 # Gradle generated files
 .gradle/
-.idea/gradle.xml
 build
 app/release
 
 # User-specific configurations
-.idea/assetWizardSettings.xml
-.idea/caches
-.idea/icon.png
-.idea/codeStyles
-.idea/libraries/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/encodings.xml
-.idea/gradle_extensions.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/navEditor.xml
-.idea/scopes/scope_settings.xml
-.idea/runConfigurations.xml
-.idea/vcs.xml
+.idea/*
 *.iml
 
 # OS-specific files
