--- a/provider-tools/build.gradle
+++ b/provider-tools/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    viewBinding.enabled = true
     buildTypes {
         release {
             minifyEnabled false
