--- a/versions.gradle
+++ b/versions.gradle
@@ -12,23 +12,23 @@ def versions = [
         ],
         androidx: [
                 annotation          : '1.1.0',
-                appcompat           : '1.2.0-alpha01',
-                browser             : '1.2.0-rc01',
+                appcompat           : '1.1.0',
+                browser             : '1.2.0',
                 cardview            : '1.0.0',
                 constraintlayout    : '2.0.0-beta4',
-                core                : '1.2.0-rc01',
-                fragment            : '1.2.0-rc03',
+                core                : '1.2.0',
+                fragment            : '1.2.2',
                 gridlayout          : '1.0.0',
-                lifecycle           : '2.2.0-rc03',
-                media               : '1.2.0-alpha01',
-                navigation          : '2.2.0-rc03',
-                paging              : '2.1.0',
+                lifecycle           : '2.2.0',
+                media               : '1.1.0',
+                navigation          : '2.2.1',
+                paging              : '2.1.1',
                 palette             : '1.0.0',
                 preference          : '1.1.0',
                 percentlayout       : '1.0.0',
-                room                : '2.2.2',
+                room                : '2.2.4',
                 recyclerview        : '1.1.0',
-                swiperefreshlayout  : '1.1.0-alpha03',
+                swiperefreshlayout  : '1.1.0',
                 vectordrawable      : '1.1.0',
         ],
         firebase : [
@@ -40,7 +40,7 @@ def versions = [
                 uiauth      : '6.0.2'
         ],
         google: [
-                material    : '1.2.0-alpha02',
+                material    : '1.2.0-alpha05',
                 places      : '2.0.0'
         ],
         kotlin : '1.3.61',
