--- a/versions.gradle
+++ b/versions.gradle
@@ -11,26 +11,26 @@ def versions = [
                 targetSdk : 29
         ],
         androidx: [
-                annotation          : '1.1.0',
-                appcompat           : '1.1.0',
-                browser             : '1.2.0',
+                annotation          : '1.2.0',
+                appcompat           : '1.2.0',
+                browser             : '1.3.0',
                 cardview            : '1.0.0',
-                core                : '1.2.0',
-                fragment            : '1.2.2',
+                core                : '1.3.2',
+                fragment            : '1.3.2',
                 gridlayout          : '1.0.0',
-                lifecycle           : '2.2.0',
-                navigation          : '2.2.1',
-                preference          : '1.1.0',
+                lifecycle           : '2.3.1',
+                navigation          : '2.3.4',
+                preference          : '1.1.1',
                 percentlayout       : '1.0.0',
                 recyclerview        : '1.1.0',
         ],
         google: [
-                material    : '1.2.0-alpha05',
+                material    : '1.3.0',
         ],
         kotlin : '1.3.61',
         test : [
-                runner      : '1.1.1',
-                espresso    : '3.2.0'
+                runner      : '1.3.0',
+                espresso    : '3.3.0'
         ]
 ]
 
@@ -60,7 +60,7 @@ def deps = [
         lifecycle : [
                 common      : "androidx.lifecycle:lifecycle-common-java8:${versions.androidx.lifecycle}",
                 compiler    : "androidx.lifecycle:lifecycle-compiler:${versions.androidx.lifecycle}",
-                extensions  : "androidx.lifecycle:lifecycle-extensions:${versions.androidx.lifecycle}",
+                extensions  : "androidx.lifecycle:lifecycle-extensions:2.2.0",
                 livedata    : "androidx.lifecycle:lifecycle-livedata-ktx:${versions.androidx.lifecycle}",
                 runtime     : "androidx.lifecycle:lifecycle-runtime-ktx:${versions.androidx.lifecycle}",
                 viewmodel   : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.androidx.lifecycle}"
@@ -73,7 +73,7 @@ def deps = [
                 ui         : "androidx.navigation:navigation-ui-ktx:${versions.androidx.navigation}"
         ],
         test : [
-                junit : 'junit:junit:4.12',
+                junit : 'junit:junit:4.13.1',
                 runner      : "androidx.test:runner:${versions.test.runner}",
                 espresso : [
                         core : "androidx.test.espresso:espresso-core:${versions.test.espresso}"
