--- a/provider-tools/build.gradle
+++ b/provider-tools/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 
@@ -33,9 +33,6 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-    }
-    androidExtensions {
-        experimental = true
     }
 }
 
