--- a/provider-tools/build.gradle
+++ b/provider-tools/build.gradle
@@ -13,7 +13,9 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    viewBinding.enabled = true
+    buildFeatures {
+        viewBinding = true
+    }
     buildTypes {
         release {
             minifyEnabled false
