--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -4,14 +4,13 @@ apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
 android {
+    namespace "com.ibashkimi.shared"
     compileSdkVersion versions.android.compileSdk
     buildToolsVersion versions.android.buildTools
 
     defaultConfig {
         minSdkVersion versions.android.minSdk
         targetSdkVersion versions.android.targetSdk
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -25,11 +24,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "17"
     }
 }
 
@@ -41,7 +40,6 @@ dependencies {
     api project(':theme')
     api deps.kotlin.coroutines
     // ViewModel and LiveData
-    api deps.lifecycle.extensions
     api deps.lifecycle.viewmodel
     api deps.lifecycle.livedata
     api deps.lifecycle.runtime
