--- a/versions.gradle
+++ b/versions.gradle
@@ -5,32 +5,32 @@
 
 def versions = [
         android: [
-                compileSdk: 30,
-                buildTools: '30.0.3',
+                compileSdk: 33,
+                buildTools: '33.0.2',
                 minSdk    : 21,
-                targetSdk : 30
+                targetSdk : 33
         ],
         androidx: [
-                annotation          : '1.2.0',
-                appcompat           : '1.2.0',
-                browser             : '1.3.0',
+                annotation          : '1.6.0',
+                appcompat           : '1.6.1',
+                browser             : '1.5.0',
                 cardview            : '1.0.0',
-                core                : '1.3.2',
-                fragment            : '1.3.2',
+                core                : '1.10.0',
+                fragment            : '1.5.7',
                 gridlayout          : '1.0.0',
-                lifecycle           : '2.3.1',
-                navigation          : '2.3.4',
-                preference          : '1.1.1',
+                lifecycle           : '2.6.1',
+                navigation          : '2.5.3',
+                preference          : '1.2.0',
                 percentlayout       : '1.0.0',
-                recyclerview        : '1.1.0',
+                recyclerview        : '1.3.0',
         ],
         google: [
-                material    : '1.3.0',
+                material    : '1.8.0',
         ],
-        kotlin : '1.4.32',
+        kotlin : '1.8.20',
         test : [
-                runner      : '1.3.0',
-                espresso    : '3.3.0'
+                runner      : '1.5.0',
+                espresso    : '3.5.1'
         ]
 ]
 
@@ -54,12 +54,11 @@ def deps = [
         kotlin : [
                 test            : "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin",
                 plugin          : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
-                coroutines      : 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+                coroutines      : 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0-RC'
         ],
         lifecycle : [
                 common      : "androidx.lifecycle:lifecycle-common-java8:${versions.androidx.lifecycle}",
                 compiler    : "androidx.lifecycle:lifecycle-compiler:${versions.androidx.lifecycle}",
-                extensions  : "androidx.lifecycle:lifecycle-extensions:2.2.0",
                 livedata    : "androidx.lifecycle:lifecycle-livedata-ktx:${versions.androidx.lifecycle}",
                 runtime     : "androidx.lifecycle:lifecycle-runtime-ktx:${versions.androidx.lifecycle}",
                 viewmodel   : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.androidx.lifecycle}"
@@ -72,7 +71,7 @@ def deps = [
                 ui         : "androidx.navigation:navigation-ui-ktx:${versions.androidx.navigation}"
         ],
         test : [
-                junit : 'junit:junit:4.13.1',
+                junit : 'junit:junit:4.13.2',
                 runner      : "androidx.test:runner:${versions.test.runner}",
                 espresso : [
                         core : "androidx.test.espresso:espresso-core:${versions.test.espresso}"
