--- a/theme/build.gradle
+++ b/theme/build.gradle
@@ -27,15 +27,15 @@ android {
 }
 
 dependencies {
-    testImplementation deps.test.junit
-    androidTestImplementation deps.test.runner
-    androidTestImplementation deps.test.espresso.core
+    testImplementation libs.junit4
+    androidTestImplementation libs.androidx.test.runner
+    androidTestImplementation libs.androidx.test.espresso.core
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api deps.google.material
-    api deps.androidx.appcompat
-    api deps.androidx.annotation
-    api deps.androidx.cardview
-    api deps.androidx.preference
-    implementation deps.androidx.gridlayout
-    implementation deps.androidx.recyclerview
+    api libs.google.material
+    api libs.androidx.appcompat
+    api libs.androidx.annotation
+    api libs.androidx.cardview
+    api libs.androidx.preference
+    implementation libs.androidx.gridlayout
+    implementation libs.androidx.recyclerview
 }
