--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-androidGradlePlugin = "8.0.0"
+androidGradlePlugin = "8.0.1"
 
 androidx-annotation = "1.6.0"
 androidx-appcompat = "1.6.1"
 androidx-browser = "1.5.0"
-androidx-core = "1.10.0"
+androidx-core = "1.10.1"
 androidx-cardview = "1.0.0"
 androidx-fragment = "1.5.7"
 androidx-gridlayout = "1.0.0"
@@ -14,10 +14,10 @@ androidx-percentlayout = "1.0.0"
 androidx-preference = "1.2.0"
 androidx-recyclerview = "1.3.0"
 
-googleMaterial = "1.8.0"
+googleMaterial = "1.9.0"
 
-kotlin = "1.8.20"
-kotlinx-coroutines = "1.7.0-RC"
+kotlin = "1.8.21"
+kotlinx-coroutines = "1.7.1"
 
 junit4 = "4.13.2"
 junit5 = "5.9.2"
