--- a/provider/build.gradle
+++ b/provider/build.gradle
@@ -1,29 +1,30 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id("com.android.library")
+    id("kotlin-android")
+}
 
 android {
-    namespace "com.ibashkimi.provider"
-    compileSdkVersion versions.android.compileSdk
-    buildToolsVersion versions.android.buildTools
+    namespace = "com.ibashkimi.provider"
+    compileSdk = versions.android.compileSdk
+    buildToolsVersion(versions.android.buildTools)
 
     defaultConfig {
-        minSdkVersion versions.android.minSdk
-        targetSdkVersion versions.android.targetSdk
+        minSdk = versions.android.minSdk
+        targetSdk = versions.android.targetSdk
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles(getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro")
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
@@ -32,9 +33,9 @@ android {
 }
 
 dependencies {
-    implementation libs.androidx.appcompat
-    implementation libs.kotlinx.coroutines.android
+    implementation(libs.androidx.appcompat)
+    implementation(libs.kotlinx.coroutines.android)
 
-    testImplementation libs.junit4
-    androidTestImplementation libs.androidx.test.espresso.core
+    testImplementation(libs.junit4)
+    androidTestImplementation(libs.androidx.test.espresso.core)
 }
