--- a/theme/build.gradle
+++ b/theme/build.gradle
@@ -1,25 +1,26 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id("com.android.library")
+    id("kotlin-android")
+}
 
 android {
-    namespace "com.ibashkimi.theme"
-    compileSdkVersion versions.android.compileSdk
-    buildToolsVersion versions.android.buildTools
+    namespace = "com.ibashkimi.theme"
+    compileSdk = versions.android.compileSdk
 
     defaultConfig {
-        minSdkVersion versions.android.minSdk
-        targetSdkVersion versions.android.targetSdk
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdk = versions.android.minSdk
+        targetSdk = versions.android.targetSdk
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles(getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro")
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = "17"
@@ -27,15 +28,15 @@ android {
 }
 
 dependencies {
-    implementation libs.androidx.appcompat
-    implementation libs.androidx.annotation
-    implementation libs.androidx.cardview
-    implementation libs.androidx.preference
-    implementation libs.androidx.gridlayout
-    implementation libs.androidx.recyclerview
-    implementation libs.google.material
+    implementation(libs.androidx.appcompat)
+    implementation(libs.androidx.annotation)
+    implementation(libs.androidx.cardview)
+    implementation(libs.androidx.preference)
+    implementation(libs.androidx.gridlayout)
+    implementation(libs.androidx.recyclerview)
+    implementation(libs.google.material)
 
-    testImplementation libs.junit4
-    androidTestImplementation libs.androidx.test.runner
-    androidTestImplementation libs.androidx.test.espresso.core
+    testImplementation(libs.junit4)
+    androidTestImplementation(libs.androidx.test.runner)
+    androidTestImplementation(libs.androidx.test.espresso.core)
 }
