--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,9 @@
 [versions]
+android-compileSdk = "33"
+android-buildTools = "33.0.2"
+android-minSdk = "21"
+android-targetSdk = "33"
+
 androidGradlePlugin = "8.0.1"
 
 androidx-annotation = "1.6.0"
