--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,26 +6,26 @@ android-targetSdk = "34"
 
 androidGradlePlugin = "8.1.1"
 
-androidx-annotation = "1.6.0"
+androidx-annotation = "1.7.0"
 androidx-appcompat = "1.6.1"
-androidx-browser = "1.5.0"
-androidx-core = "1.10.1"
+androidx-browser = "1.6.0"
+androidx-core = "1.12.0"
 androidx-cardview = "1.0.0"
-androidx-fragment = "1.5.7"
+androidx-fragment = "1.6.1"
 androidx-gridlayout = "1.0.0"
-androidx-lifecycle = "2.6.1"
-androidx-navigation = "2.5.3"
+androidx-lifecycle = "2.6.2"
+androidx-navigation = "2.7.3"
 androidx-percentlayout = "1.0.0"
-androidx-preference = "1.2.0"
-androidx-recyclerview = "1.3.0"
+androidx-preference = "1.2.1"
+androidx-recyclerview = "1.3.1"
 
-dagger = "2.46.1"
+dagger = "2.48"
 hilt = "1.0.0"
 
 googleMaterial = "1.9.0"
 
-kotlin = "1.8.21"
-kotlinx-coroutines = "1.7.1"
+kotlin = "1.9.10"
+kotlinx-coroutines = "1.7.3"
 
 junit4 = "4.13.2"
 junit5 = "5.9.2"
@@ -88,8 +88,8 @@ androidx-test-runner = { module = "androidx.test:runner", version.ref = "test-ru
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "test-rules" }
 androidx-test-truth = { module = "androidx.test.ext:truth", version.ref = "test-ext-truth" }
 
-dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "hilt" }
-dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "hilt" }
+dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
+dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 
 google-material = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
 
